Property routes added in Index

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 ## DB CONNECTION URL
-MONGODB_CONNECTION=mongodb+srv://LIVIT-USEER:LivitAnd1234@cluster-livit.ttnjszm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster-LIVIT
+MONGODB_CONNECTION=mongodb+srv://LIVIT-USEER:LivitAnd1234@cluster-livit.ttnjszm.mongodb.net/LIVIT_V_001?retryWrites=true&w=majority&appName=Cluster-LIVIT
+PORT = 8080
