--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "events": "^3.3.0",
     "glightbox": "^3.3.0",
     "google-fonts": "^1.0.0",
     "react": "^18.3.1",
