--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.15.19",
-    "@mui/material": "^5.15.19",
+    "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -28,7 +28,9 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-swipeable-views-utils": "^0.14.0",
     "styled-components": "^6.1.11",
+    "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
