--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 ## DB CONNECTION URL
 MONGODB_CONNECTION=mongodb+srv://LIVIT-USEER:LivitAnd1234@cluster-livit.ttnjszm.mongodb.net/LIVIT_V_001?retryWrites=true&w=majority&appName=Cluster-LIVIT
 PORT = 8080
+
+##CLIENT SECRET
+JWT_SECRET = l2i3v4i5t6m7e8r9n
