--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "events": "^3.3.0",
     "glightbox": "^3.3.0",
     "google-fonts": "^1.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
